--- a/w5_key_tree.ipynb
+++ b/w5_key_tree.ipynb
@@ -277,6 +277,128 @@
     "            node = node.left\n",
     "        else:\n",
     "            node = node.right\n",
+    "    return node\n",
+    "\n",
+    "#tree-minimum\n",
+    "def tree_minimum(node):\n",
+    "    while node.left is not None:\n",
+    "        node = node.left\n",
+    "    return node\n",
+    "\n",
+    "#tree-maximum\n",
+    "def tree_maximum(node):\n",
+    "    while node.right is not None:\n",
+    "        node = node.right\n",
+    "    return node\n",
+    "\n",
+    "#tree-successor\n",
+    "def tree_successor(node):\n",
+    "    if node.right is not None:\n",
+    "        return tree_minimum(node.right)\n",
+    "    y = node.parent\n",
+    "    while y is not None and node == y.right:\n",
+    "        node = y\n",
+    "        y = y.parent\n",
+    "    return y\n",
+    "\n",
+    "#tree-insert\n",
+    "#search for the right place to insert the new node\n",
+    "def tree_insert(root, node):\n",
+    "    y = None\n",
+    "    x = root\n",
+    "\n",
+    "    #search the place for insert z\n",
+    "    while x is not None:\n",
+    "        y = x\n",
+    "        if node.key < x.key:\n",
+    "            x = x.left\n",
+    "        else:\n",
+    "            x = x.right\n",
+    "    node.parent = y\n",
+    "    \n",
+    "    if y is None:\n",
+    "        root = node\n",
+    "    elif node.key < y.key:\n",
+    "        y.left = node\n",
+    "    else:\n",
+    "        y.right = node\n",
+    "    return root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f88ce16",
+   "metadata": {},
+   "source": [
+    "# Deletion in Binary Tree (Hardest)\n",
+    "\n",
+    "    # consider 3 cases\n",
+    " \n",
+    "        1. If z has no children, modify parent (node.left or node.right) to NULL\n",
+    "\n",
+    "        2. If z has 1 children, replace z by z' children node (node = node.left or node.right)\n",
+    "\n",
+    "        3. If z has 2 childrens, find z's successor of y (key that larger than all left and smaller than all right)\n",
+    "\n",
+    "    # 4 procedures\n",
+    "\n",
+    "        1. If z have no left child, then replace node with right children (num or null)\n",
+    "\n",
+    "        2. If z has 1 child, and left children, then replace z by left child.\n",
+    "\n",
+    "        3. If z has 2 child, If y is right sub-tree, and     right children, replace z by y (directly sucessor)\n",
+    "        \n",
+    "        4. If z has 2 child, If y is right sub-tree, but not right children, then replace y by it own right child, then replace z by y (find sucessor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2383d0b",
+   "metadata": {},
+   "source": [
+    "# Transplant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7101d024",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transplant(t, u, v):\n",
+    "    if u.parent = None:\n",
+    "        t.root = v\n",
+    "    elif(u == u.parent.left):\n",
+    "        u.parent.left = v\n",
+    "    else:\n",
+    "        u.parent.right = v\n",
+    "    if v is not None:\n",
+    "        v.parent = u.parent\n",
+    "    return t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3279c480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tree_delete(node, z):\n",
+    "    if z.left == None:\n",
+    "        transplant(node, z, z.right)\n",
+    "    elif z.right == None:\n",
+    "        transplant(node, z, z.left)\n",
+    "    else:\n",
+    "        y = tree_minimum(z.right)\n",
+    "        if y.parent != z:\n",
+    "            transplant(node, y, y.right) #delete y from its parent\n",
+    "            y.right = z.right\n",
+    "            y.right.parent = y\n",
+    "        transplant(node, z, y) #delete z from its parent\n",
+    "        y.left = z.left\n",
+    "        y.left.parent = y\n",
     "    return node"
    ]
   }
