--- a/w2_algorithm.ipynb
+++ b/w2_algorithm.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -45,6 +31,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "id": "UYCTdFrGOvCV",
+        "outputId": "0f8869d1-e0ad-4985-f99e-29d8859cdecc"
+      },
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-3-899c89d82709>, line 4)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-899c89d82709>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    A := input() #input an array A with the index start from 0- N-1\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          ]
+        }
+      ],
       "source": [
         "from re import L\n",
         "#Algorithm : just write the algorithm in exam, so no syntax error\n",
@@ -87,29 +92,15 @@
         "      else:\n",
         "         return m2\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
-        },
-        "id": "UYCTdFrGOvCV",
-        "outputId": "0f8869d1-e0ad-4985-f99e-29d8859cdecc"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-3-899c89d82709>, line 4)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-899c89d82709>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    A := input() #input an array A with the index start from 0- N-1\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "alfaCE9QPpe8"
+      },
+      "outputs": [],
       "source": [
         "#write an Algorithm to find the Majority\n",
         "[1,2,1,2,1,2,1,2,3,1,1] # the majority is 1\n",
@@ -213,15 +204,15 @@
         "      return (\"no majority\")\n",
         "\n",
         "}"
-      ],
-      "metadata": {
-        "id": "alfaCE9QPpe8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bHgQcLDgnPzB"
+      },
+      "outputs": [],
       "source": [
         "#AJ, Algorithm\n",
         "AjMajority(A[0...N-1])\n",
@@ -239,24 +230,24 @@
         "    }\n",
         "    return (\"no majority\") #costs = c8, times = 1\n",
         "}"
-      ],
-      "metadata": {
-        "id": "bHgQcLDgnPzB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "$c_1(N+1) + c_2N + c_3\\sum_{i=0}^{N-1}\\sum_{j=i}^{N-1}j + c_4\\sum_{j=i}^{N-1}t_j-1 + c_5\\sum_{j=i}^{N-1}t_j-1 + c_6N + c_7N + c_8$"
-      ],
       "metadata": {
         "id": "7z33OvB1m_UY"
-      }
+      },
+      "source": [
+        "$c_1(N+1) + c_2N + c_3\\sum_{i=0}^{N-1}\\sum_{j=i}^{N-1}j + c_4\\sum_{j=i}^{N-1}t_j-1 + c_5\\sum_{j=i}^{N-1}t_j-1 + c_6N + c_7N + c_8$"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y_yqnT3YZ2t-"
+      },
+      "outputs": [],
       "source": [
         "def SortArray()\n",
         "{\n",
@@ -271,15 +262,13 @@
         "        }\n",
         "    }\n",
         "}"
-      ],
-      "metadata": {
-        "id": "Y_yqnT3YZ2t-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tirwP_4xehbg"
+      },
       "source": [
         "Make a better algorithm to minimize resources like:\n",
         "\n",
@@ -293,36 +282,47 @@
         "  \n",
         "\n",
         "  Space :"
-      ],
-      "metadata": {
-        "id": "tirwP_4xehbg"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AYlLR7qsfQ_f"
+      },
+      "outputs": [],
       "source": [
         "#Insertion sort\n",
         "# Index  1 2 3 4 5\n",
         "# Value [5,4,3,2,1]\n",
         "# In this case we start from 2nd element\n",
         "\n",
-        "for (j=2; j<len(A); j++):\n",
+        "for (j=2; j<len(A); j++):           #c1, n-1\n",
         "  {\n",
-        "      key = A[j]\n",
-        "      i = j-1\n",
-        "      while(i>0 and A[i] > key):\n",
+        "      key = A[j]                    #c2, (n-1)-1\n",
+        "      i = j-1                       #c3, (n-1)-1\n",
+        "      while(i>0 and A[i] > key):    #c4, (n-1)(n)\n",
         "      {\n",
-        "          A[i+1] = A[i]\n",
-        "          i = i-1\n",
+        "          A[i+1] = A[i]             #c5, (n^2-n-1)-1\n",
+        "          i = i-1                   #c6, (n^2-n-1)-1\n",
         "      }\n",
-        "      A[i+1] = key\n",
+        "      A[i+1] = key                  #c7, (n-1)\n",
         "  }"
-      ],
-      "metadata": {
-        "id": "AYlLR7qsfQ_f"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
