--- a/w5_AVL_tree.ipynb
+++ b/w5_AVL_tree.ipynb
@@ -151,8 +151,25 @@
     "    return T.right.height - T.left.height\n",
     "\n",
     "def balancer(T):\n",
-    "    T.height = max(T.left.height, T.right.height) + 1\n",
-    "    if (balanceFactor(T) == 2):\n",
+    "    T.height = max(get_height(T.left), get_height(T.right)) + 1\n",
+    "    \n",
+    "    if balance_factor(T) == 2:\n",
+    "        if balance_factor(T.right) < 0:\n",
+    "            T.right = rotate_right(T.right)\n",
+    "        return rotate_left(T)\n",
+    "    \n",
+    "    if balance_factor(T) == -2:\n",
+    "        if balance_factor(T.left) > 0:\n",
+    "            T.left = rotate_left(T.left)\n",
+    "        return rotate_right(T)\n",
+    "    \n",
+    "    return T\n",
+    "\n",
+    "    # Helper functions assumed to be defined elsewhere:\n",
+    "    # - get_height(node): returns node.height or 0 if node is None\n",
+    "    # - balance_factor(node): returns get_height(node.right) - get_height(node.left)\n",
+    "    # - rotate_left(node): performs left rotation and returns new root\n",
+    "    # - rotate_right(node): performs right rotation and returns new root\n",
     "        \n",
     "\n",
     "\n",
@@ -168,8 +185,52 @@
     "        T.left = AVLinsert2(T.left,z)\n",
     "    else:\n",
     "        T.right = AVLinsert2(T.right,z)\n",
-    "    return Bakancer(T)"
+    "    return balancer(T)\n",
+    "\n",
+    "#Find min\n",
+    "def find_min(T):\n",
+    "    if T.left is not None:\n",
+    "        return find_min(T.left)\n",
+    "    else:\n",
+    "        return T\n",
+    "    \n",
+    "#Remove min\n",
+    "def remove_min(T):\n",
+    "    if T.left is None:\n",
+    "        return T.right\n",
+    "    T.left = remove_min(T.left)\n",
+    "    return balancer(T)\n",
+    "\n",
+    "#remove key\n",
+    "def remove(T, k):\n",
+    "    if T is None:\n",
+    "        return None\n",
+    "    \n",
+    "    if k < T.key:\n",
+    "        T.left = remove(T.left, k)\n",
+    "    elif k > T.key:\n",
+    "        T.right = remove(T.right, k)\n",
+    "    else:\n",
+    "        # Node to delete found\n",
+    "        l, r = T.left, T.right\n",
+    "        # Delete current node by detaching references (Python GC handles memory)\n",
+    "        if r is None:\n",
+    "            return l\n",
+    "        min_node = find_min(r)\n",
+    "        min_node.right = remove_min(r)\n",
+    "        min_node.left = l\n",
+    "        return balancer(min_node)\n",
+    "    \n",
+    "    return balancer(T)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "686167ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
