--- a/w6_binomial_heap.ipynb
+++ b/w6_binomial_heap.ipynb
@@ -33,6 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "def MakeBinomialHeap():\n",
     "    class BinomialHeap:\n",
     "        def __init__(self):\n",
@@ -211,11 +213,187 @@
     "    y = x\n",
     "    z = y.parent\n",
     "\n",
+    "    #percolade uo process\n",
     "    while z is not None and y.key < z.key:\n",
     "        # Swap keys\n",
     "        y.key, z.key = z.key, y.key\n",
     "        y = z\n",
     "        z = y.parent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e6cfe7",
+   "metadata": {},
+   "source": [
+    "# Fibonacci Heaps\n",
+    "\n",
+    "    # lazy binomial heap, allow to have duplicate degree.\n",
+    "\n",
+    "we can cut at most one child.\n",
+    "\n",
+    "if cut another child, the node needs to be cut from its parent and become the root of new tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b74b89f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, key):\n",
+    "        self.key = key\n",
+    "        self.degree = 0\n",
+    "        self.parent = None\n",
+    "        self.child = None\n",
+    "        self.mark = False   # represent the color\n",
+    "        self.left = self\n",
+    "        self.right = self\n",
+    "\n",
+    "class FibHeapInsert:\n",
+    "    \"\"\"\n",
+    "    Takes O(1)\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.min = None\n",
+    "        self.n = 0\n",
+    "        self.root_list = []\n",
+    "\n",
+    "    def insert(self, x):\n",
+    "        x.degree = 0\n",
+    "        x.parent = None\n",
+    "        x.child = None\n",
+    "        x.mark = False\n",
+    "\n",
+    "        #is new node\n",
+    "        if self.min is None:\n",
+    "            self.root_list = [x]\n",
+    "            self.min = x\n",
+    "        else:\n",
+    "            self.root_list.append(x)\n",
+    "            if x.key < self.min.key:\n",
+    "                self.min = x\n",
+    "\n",
+    "        self.n += 1\n",
+    "\n",
+    "def fib_heap_union(H1, H2):\n",
+    "    \"\"\"\n",
+    "    Takes O(1)\n",
+    "    \"\"\"\n",
+    "    H = FibHeapInsert()  # Create a new empty Fibonacci heap\n",
+    "    H.min = H1.min\n",
+    "\n",
+    "    # Concatenate the root lists of H1 and H2\n",
+    "    H.root_list = H1.root_list + H2.root_list\n",
+    "\n",
+    "    # Determine the new minimum\n",
+    "    if (H1.min is None) or (H2.min is not None and H2.min.key < H1.min.key):\n",
+    "        H.min = H2.min\n",
+    "\n",
+    "    # Update the total number of nodes\n",
+    "    H.n = H1.n + H2.n\n",
+    "\n",
+    "    return H\n",
+    "\n",
+    "# ALGORITHM 21\n",
+    "def consolidate(H):\n",
+    "    \"\"\"\n",
+    "    re-arrange the binomial tree to become\n",
+    "    the beautiful binomial tree\n",
+    "    Takes O(log n)\n",
+    "\n",
+    "    Find the minimum value point the pointer.z to that minimum value\n",
+    "    then use that pointer.z walking to the right of the nodes\n",
+    "    create the array A[4] = (0, 1, 2, 3) to store each node with same degree as index\n",
+    "    A0 point to the node that has degree 0\n",
+    "    A1 point to the node that has degree 1\n",
+    "    A2 point to the node that has degree 2\n",
+    "    A3 point to the node that has degree 3\n",
+    "    repeating until we encounter the node that has a degree [i]\n",
+    "    which Array A[i] is not NULL (have a node with same degree)\n",
+    "    after we encounter that node we combine that node together\n",
+    "    then keep checking if A[i+1] is NULL or not, if not keep combine\n",
+    "    \"\"\"\n",
+    "    # Upper bound on degree\n",
+    "    D = int(math.log2(H.n)) + 1\n",
+    "    A = [None] * D\n",
+    "\n",
+    "    # Copy root list nodes to avoid modification during iteration\n",
+    "    root_nodes = list(H.root_list)\n",
+    "    for w in root_nodes:\n",
+    "        x = w\n",
+    "        d = x.degree\n",
+    "        while A[d] is not None:\n",
+    "            y = A[d]\n",
+    "            if x.key > y.key:\n",
+    "                x, y = y, x  # exchange x with y\n",
+    "            link(H, y, x)\n",
+    "            A[d] = None\n",
+    "            d += 1\n",
+    "        A[d] = x\n",
+    "\n",
+    "    # Reconstruct root list and reset H.min\n",
+    "    H.root_list = []\n",
+    "    H.min = None\n",
+    "    for i in range(D):\n",
+    "        if A[i] is not None:\n",
+    "            H.root_list.append(A[i])\n",
+    "            if H.min is None or A[i].key < H.min.key:\n",
+    "                H.min = A[i]\n",
+    "\n",
+    "def link(H, y, x):\n",
+    "    \"\"\"Make y a child of x.\"\"\"\n",
+    "    H.root_list.remove(y)\n",
+    "    if x.child is None:\n",
+    "        x.child = y\n",
+    "        y.left = y.right = y\n",
+    "    else:\n",
+    "        # Insert y into child list of x\n",
+    "        child = x.child\n",
+    "        y.left = child\n",
+    "        y.right = child.right\n",
+    "        child.right.left = y\n",
+    "        child.right = y\n",
+    "    y.parent = x\n",
+    "    x.degree += 1\n",
+    "    y.mark = False\n",
+    "\n",
+    "# ALGORITHM 20\n",
+    "def fib_heap_extract_min(H):\n",
+    "    z = H.min\n",
+    "    if z is not None:\n",
+    "        # Add each child of z to the root list\n",
+    "        if z.child:\n",
+    "            children = []\n",
+    "            x = z.child\n",
+    "            while True:\n",
+    "                children.append(x)\n",
+    "                x = x.right\n",
+    "                if x == z.child:\n",
+    "                    break\n",
+    "            for x in children:\n",
+    "                x.parent = None\n",
+    "                H.root_list.append(x)\n",
+    "\n",
+    "        # Remove z from the root list\n",
+    "        H.root_list.remove(z)\n",
+    "\n",
+    "        # Update min pointer\n",
+    "        if not H.root_list:\n",
+    "            H.min = None\n",
+    "        else:\n",
+    "            H.min = H.root_list[0]\n",
+    "            \"\"\"\n",
+    "            re-arrange the binomial tree to become\n",
+    "            the beautiful binomial tree\n",
+    "            Takes O(log n)\n",
+    "            \"\"\"\n",
+    "            consolidate(H)\n",
+    "\n",
+    "        H.n -= 1\n",
+    "    return z"
    ]
   }
  ],
