update more algorithm

--- a/w7_alrogithmic_paradigm.ipynb
+++ b/w7_alrogithmic_paradigm.ipynb
@@ -120,6 +120,69 @@
     "    else:\n",
     "        return dominos(n-1) + dominos(n-2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4f7722bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "f(n) := min{f(n-1), f(n-7), f(n-10)} + 1\n",
+    "f(1) := 1\n",
+    "f(2) := 2\n",
+    "f(3) := 3\n",
+    "f(4) := 4\n",
+    "f(5) := 5\n",
+    "f(6) := 6\n",
+    "f(7) := 1\n",
+    "f(8) := 2\n",
+    "f(9) := 3\n",
+    "f(10) := 1\n",
+    "\"\"\"\n",
+    "\n",
+    "def min_coins(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    res = float('inf')\n",
+    "    for coin in [1, 7, 10]:\n",
+    "        if n - coin >= 0:\n",
+    "            res = min(res, 1 + min_coins(n - coin))\n",
+    "    return res\n",
+    "\n",
+    "m = 15  # Example amount to make change for\n",
+    "print(min_coins(m))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "682b738d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "if we have m and n block if we want to find the number of ways to reach from (0,0) to (m,n) then\n",
+    "f(m,n) = f(m, n-1) + f(m-1, n)\n",
+    "f(0,n) := 1\n",
+    "f(m,0) := 1\n",
+    "\"\"\"\n",
+    "\n",
+    "def f(m,n):\n",
+    "    if m == 0 or n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return f(m, n-1) + f(m-1, n)"
+   ]
   }
  ],
  "metadata": {
