update cookie_run methods

--- a/w7_dynamic_programming.ipynb
+++ b/w7_dynamic_programming.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "125baa2a",
    "metadata": {},
    "outputs": [
@@ -46,6 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0, 0, 7, 5, 3, 4, 6, 2, 1, 8, 9]\n",
       "Maximum score: 26\n"
      ]
     }
@@ -87,16 +88,55 @@
     "\n",
     "# test the cookie run function\n",
     "n = len(A) - 1\n",
-    "print(\"Maximum score:\", cookie_run(n))\n"
+    "print(\"Maximum score:\", cookie_run(n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c7d1e393",
+   "execution_count": 14,
+   "id": "1ed2ecb5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 43, 4, 21, 64, 40, 35, 24, 13, 3, 8, 1, 39, 10, 44, 0, 29, 26, 21, 13, 27, 54, 46, 49, 10, 31, 6, 62, 26, 0, 45, 21, 24, 24, 2, 43, 4, 56, 48, 20, 18, 33, 10, 63, 11, 43, 0, 33, 14, 67, 3, 55, 56, 49, 48, 43, 53, 5, 1, 56, 68, 41, 44, 46, 11, 61, 38, 25, 11, 47, 5, 37, 62, 32, 5, 26, 30, 29, 25, 31, 13, 7, 27, 32, 13, 22, 29, 1, 21, 55, 28, 21, 16, 36, 36, 32, 46, 0, 15, 0]\n",
+      "Maximum score: 1264\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "กระโดดได้จากบล็อก j → i ถ้า i - j ≥ 3 เพราะต้องรอ 2 ช่องก่อนจะกระโดด\n",
+    "\"\"\"\n",
+    "\n",
+    "def cookie_run(A):\n",
+    "    \"\"\"\n",
+    "    A คืออาร์เรคะแนนในแต่ละบล็อก\n",
+    "\tn คือจำนวนบล็อกทั้งหมด\n",
+    "    dp[i] จะเก็บ \"คะแนนสูงสุดที่สามารถได้เก็บเมื่อไปถึงหรือผ่านบล็อกที่ i\"\n",
+    "    \"\"\"\n",
+    "    n = len(A)\n",
+    "    dp = [0] * n\n",
+    "    dp[0] = A[0]\n",
+    "    dp[1] = A[1]\n",
+    "    dp[2] = A[2]\n",
+    "\n",
+    "    for i in range(3, n):\n",
+    "        max_score = 0\n",
+    "        for j in range(i - 3 + 1):  # jump allowed from 0 to i-3\n",
+    "            max_score = max(max_score, dp[j] + A[i])\n",
+    "        dp[i] = max(dp[i - 1], max_score)\n",
+    "    \n",
+    "    return dp[-1], dp\n",
+    "\n",
+    "#A = [0, 0, 7, 5, 3, 4, 6, 2, 1, 8, 9] #test case\n",
+    "A = [0, 0] + [random.randint(0, rand) for i in range(98)] + [0]\n",
+    "print(A)\n",
+    "max_score, dp = cookie_run(A)\n",
+    "print(\"Maximum score:\", max_score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "87a4c86c",
    "metadata": {},
    "outputs": [
@@ -118,13 +158,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum sum collected: 1022\n"
+      "Maximum sum collected: 22\n"
      ]
     }
    ],
    "source": [
-    "#A = [0, 0, 7, 5, 3, 4, 6, 2, 1, 8, 9]\n",
-    "A = [0, 0] + [random.randint(0, rand) for i in range(98)]\n",
+    "A = [0, 0, 7, 5, 3, 4, 6, 2, 1, 8, 9]\n",
+    "#A = [0, 0] + [random.randint(0, rand) for i in range(98)]\n",
     "n = len(A)\n",
     "M = [0] * n\n",
     "next_idx = [-1] * n  # To track the next index chosen for the optimal path\n",
@@ -151,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b6ac89ea",
+   "execution_count": null,
+   "id": "87a4c86c",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e867d4",
+   "id": "b6ac89ea",
    "metadata": {},
    "outputs": [],
    "source": []
