--- a/w7_dynamic_programming.ipynb
+++ b/w7_dynamic_programming.ipynb
@@ -226,6 +226,46 @@
    "id": "b6ac89ea",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Tea-Tree's\n",
+    "\n",
+    "A = [0, 0, 2, 4, 3, 3, 0, 2, 3, 6, 4]\n",
+    "M = [0,0] \n",
+    "\n",
+    "def f(n):\n",
+    "  if(n < 3):\n",
+    "    return A[n]\n",
+    "  else:\n",
+    "    return max(f(n-1), f(n-3) + A[n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18490021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(len(A)-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4f94693",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
