update fix typo Error

--- a/w2_algorithm.ipynb
+++ b/w2_algorithm.ipynb
@@ -30,26 +30,18 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "raw",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
         },
         "id": "UYCTdFrGOvCV",
-        "outputId": "0f8869d1-e0ad-4985-f99e-29d8859cdecc"
-      },
-      "outputs": [
-        {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-3-899c89d82709>, line 4)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-899c89d82709>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    A := input() #input an array A with the index start from 0- N-1\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-          ]
+        "outputId": "0f8869d1-e0ad-4985-f99e-29d8859cdecc",
+        "vscode": {
+          "languageId": "raw"
         }
-      ],
+      },
       "source": [
         "from re import L\n",
         "#Algorithm : just write the algorithm in exam, so no syntax error\n",
@@ -95,12 +87,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "raw",
       "metadata": {
-        "id": "alfaCE9QPpe8"
+        "id": "alfaCE9QPpe8",
+        "vscode": {
+          "languageId": "raw"
+        }
       },
-      "outputs": [],
       "source": [
         "#write an Algorithm to find the Majority\n",
         "[1,2,1,2,1,2,1,2,3,1,1] # the majority is 1\n",
@@ -207,12 +200,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "raw",
       "metadata": {
-        "id": "bHgQcLDgnPzB"
+        "id": "bHgQcLDgnPzB",
+        "vscode": {
+          "languageId": "raw"
+        }
       },
-      "outputs": [],
       "source": [
         "#AJ, Algorithm\n",
         "AjMajority(A[0...N-1])\n",
@@ -242,12 +236,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "raw",
       "metadata": {
-        "id": "Y_yqnT3YZ2t-"
+        "id": "Y_yqnT3YZ2t-",
+        "vscode": {
+          "languageId": "raw"
+        }
       },
-      "outputs": [],
       "source": [
         "def SortArray()\n",
         "{\n",
@@ -285,12 +280,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "raw",
       "metadata": {
-        "id": "AYlLR7qsfQ_f"
+        "id": "AYlLR7qsfQ_f",
+        "vscode": {
+          "languageId": "raw"
+        }
       },
-      "outputs": [],
       "source": [
         "#Insertion sort\n",
         "# Index  1 2 3 4 5\n",
