--- a/w8_HomeworkBeforeMidterm.ipynb
+++ b/w8_HomeworkBeforeMidterm.ipynb
@@ -9,6 +9,7 @@
     }
    },
    "source": [
+    "2A.)\n",
     "Describe the worst-case running-time function of the following algorithms:\n",
     "1: procedure Problem2a(n)\n",
     "2:      s := 0\n",
@@ -35,6 +36,7 @@
     }
    },
    "source": [
+    "2B.)\n",
     "1: procedure Problem2b(n)\n",
     "2:      i := 0                                  //O(1)\n",
     "3:      j := n                                  \n",
@@ -61,6 +63,7 @@
     }
    },
    "source": [
+    "2C.)\n",
     "1: procedure Problem2c(n)\n",
     "2:      if n ≤ 0 then return\n",
     "3:      end if\n",
@@ -89,6 +92,7 @@
     }
    },
    "source": [
+    "3.)\n",
     "Given n arrays, each array contain n positive integers. Write an O(n^2 log n)\n",
     "algorithm to find the smallest n sums out of (n^n) possible sums that can be\n",
     "obtained by picking one positive integer from each of n arrays. For example,\n",
@@ -96,11 +100,36 @@
     "n sums of the given array is [9, 10, 12].\n",
     "\n",
     "procedure find_minimum_array(n)\n",
-    "        for i = 0 to n              //O(n)\n",
-    "            heap_sort(n)            //O(n log n) per i, O(n^2 log n) in total\n",
+    "    #Find change from previous\n",
+    "    for i := 0 to n-1 do            #O(n)\n",
+    "        for j := 1 to n-1 do        #O(n) for each i, O(n^2) in total\n",
+    "            diffArr[i][j] = A[i][j] - A[i][j-1]\n",
     "        end for\n",
+    "    end for\n",
     "\n",
-    "end procedure"
+    "    #Find lowest sum of all possible sum\n",
+    "    for i := 0 to n-1 do            #O(n)\n",
+    "        sum += A[i][0]\n",
+    "    end for\n",
+    "\n",
+    "    pq = PriorityQueue() # max heap\n",
+    "    pq.push(-sum, [0 for _ in range(n), -1) #push negative to trash main\n",
+    "\n",
+    "    for i:= 0 to n-1 do             #O(n)\n",
+    "        ansArr[i], stateArr[], last = pq.pop()      #O(log n)\n",
+    "        for j = last to n-1 do\n",
+    "            if stateArr[i] not equal to n-1 do\n",
+    "                pq.push(ansArr[i]_diff[j][++stateArr[j]], stateArr, j)      #O(log n)\n",
+    "                stateArr[j]--\n",
+    "        end for\n",
+    "    end for\n",
+    "\n",
+    "    return [-and for ans in ansArr]\n",
+    "end procedure\n",
+    "\n",
+    "\"\"\"\n",
+    "Time complexity of this algorithm is O(n^2 log n) as required.\n",
+    "\"\"\""
    ]
   },
   {
@@ -112,9 +141,196 @@
     }
    },
    "source": [
-    "Write an algorithm to sort n integers in the range 0 to n^3 −1 in O (n) time.\n",
+    "4.)\n",
+    "Write an algorithm to sort n integers in the range 0 to n^3 −1 in O(n) time.\n",
     "\n",
-    "procedure radix_sort\n"
+    "procedure radix_sort(arr, n, exp)\n",
+    "    output Array = [0] * n\n",
+    "    count Array = [0] * n\n",
+    "\n",
+    "    #Store count of occurrences in count[]\n",
+    "    for i to n                                                                                                      #O(n)\n",
+    "        digit = (arr[i] // exp) % n\n",
+    "        count[digit] += 1\n",
+    "    end for\n",
+    "\n",
+    "    #Change count[i] so that count[i] now contains the actual position of this digit in the output array.\n",
+    "    for i from 1 to n                                                                                               #O(n)\n",
+    "        count[i] += count[i-1]\n",
+    "    end for\n",
+    "\n",
+    "    #Build the output array.\n",
+    "    i = n-1\n",
+    "    while i >= 0                                                                                                    #O(n)\n",
+    "        digit = (arr[i] // exp) % n\n",
+    "        output[count[digit] - 1] = arr[i]\n",
+    "        count[digit] -= 1\n",
+    "        i -= 1\n",
+    "    end while\n",
+    "\n",
+    "    #Copy the sorted elements from the output array back to the original array.\n",
+    "    for i to n                                                                                                      #O(n)\n",
+    "        arr[i] = output[i]\n",
+    "    end for\n",
+    "end procedure\n",
+    "\n",
+    "procedure main(arr)\n",
+    "    n = len(arr)\n",
+    "    if n == 0:\n",
+    "        return arr\n",
+    "\n",
+    "    counting_sort_by_digit(arr, n, 1)                                                                                #O(n)\n",
+    "    counting_sort_by_digit(arr, n, n)                                                                                #O(n)\n",
+    "    counting_sort_by_digit(arr, n, n*n)                                                                              #O(n)\n",
+    "\n",
+    "    return arr\n",
+    "end procedure\n",
+    "\n",
+    "\"\"\"\n",
+    "worse time complexity will be O(n) + O(n) + O(n) = 3 * O(n) = O(n)\n",
+    "\n",
+    "Yes, the algorithm works properly and sorts the n integers in the range [0, n³ - 1] in O(n) time complexity. \n",
+    "This is because the number of passes is constant (since the maximum number has 3 digits), and each pass is done in linear time O(n). \n",
+    "Hence, the overall time complexity is O(n), as required.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "64c66f2a",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "5.)\n",
+    "Assuming that there are no duplicate keys in a binary search tree, develop\n",
+    "an algorithm to determine the pre-order traversal of the tree based on their\n",
+    "in-order and post-order traversal. For example,\n",
+    "In-order traversal:   3 1 4 0 2 5\n",
+    "Post-order traversal: 3 4 1 5 2 0\n",
+    "Output :              0 1 3 4 2 5\n",
+    "\n",
+    "procedure Tree(inOrder[0...n-1], postOrder[0...n-1])\n",
+    "    if n <= 0\n",
+    "        return NULL             #Empty Array: no root return NULL\n",
+    "    end if\n",
+    "\n",
+    "    root.value = postOrder[n-1] #List element of postOrder = root\n",
+    "    for i:=0 to n-1 do\n",
+    "        if inOrder[i] == root.value\n",
+    "            rootIdx := i\n",
+    "        end if\n",
+    "    end for\n",
+    "\n",
+    "    for i:=0 to n-1 do\n",
+    "        if postOrder < root.value\n",
+    "            continue\n",
+    "        end if\n",
+    "        rightSubTreeIdx := i\n",
+    "        break\n",
+    "    end for\n",
+    "\n",
+    "    root.left = Tree(inOrder[0...rootIdx-1], postOrder[0...rightSubTreeIdx-1])      #subproblem for leftSubTree\n",
+    "    root.right = Tree(inOrder[rootIdx+1...n-1], postOrder[rightSubTreeIdx...n-2])   #subproblem for rightSubTree\n",
+    "\n",
+    "    return root\n",
+    "end procedure"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "1119e60c",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "6.)\n",
+    "Write the algorithm Tree-Delete(T, z) to delete a node z from a Binary\n",
+    "Search Tree. When z has two children, use its Predecessor (maximum\n",
+    "in the left subtree) to replace it instead of the Successor.\n",
+    "\n",
+    "procedure Tree-Delete(T, z)\n",
+    "    if z.left == NULL and z.right == NULL then\n",
+    "        # Case 1: z is a leaf node\n",
+    "        if z.parent.left == z then\n",
+    "            z.parent.left = NULL\n",
+    "        else\n",
+    "            z.parent.right = NULL\n",
+    "        end if\n",
+    "    else if z.left == NULL or z.right == NULL then\n",
+    "        # Case 2: z has one child\n",
+    "        child = (z.left != NULL) ? z.left : z.right\n",
+    "        if z.parent.left == z then\n",
+    "            z.parent.left = child\n",
+    "        else\n",
+    "            z.parent.right = child\n",
+    "        end if\n",
+    "        child.parent = z.parent\n",
+    "    else\n",
+    "        # Case 3: z has two children, find predecessor\n",
+    "        predecessor = findMax(z.left)\n",
+    "        z.value = predecessor.value  # Replace value of z with predecessor's value\n",
+    "        \n",
+    "        # Now delete the predecessor node\n",
+    "        Tree-Delete(T, predecessor)\n",
+    "    end if\n",
+    "\n",
+    "    return T  # Return the modified tree\n",
+    "end procedure"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d33dd866",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "7.)\n",
+    "The d-ary heap, also known as the d-heap, is a type of priority queue data\n",
+    "structure. It extends the concept of the binary heap by allowing nodes to\n",
+    "have d children instead of just 2.\n",
+    "(a) Describe how to represent a d-ary heap in an array.\n",
+    "(b) Give an efficient implementation of ExtractMin in a d-ary min-heap.\n",
+    "Analyze its running time in terms of d and n.\n",
+    "\n",
+    "(c) Give an efficient implementation of DecreaseKey in a d-ary min-\n",
+    "heap. Analyze its running time in terms of d and n.\n",
+    "\n",
+    "(d) Give an efficient implementation of Insert in a d-ary min-heap. An-\n",
+    "alyze its running time in terms of d and n.\n",
+    "\n",
+    "(a) A d-ary heap can be represented in an array where the root is at index 0. \n",
+    "For any node at index i, its children can be found at indices d*i + 1, d*i + 2, ..., d*i + d. \n",
+    "The parent of a node at index i can be found at index (i - 1) // d.\n",
+    "\n",
+    "(b) The ExtractMin operation in a d-ary min-heap involves the following steps:\n",
+    "1. Remove the root element (the minimum element).\n",
+    "2. Replace the root with the last element in the heap.\n",
+    "3. Restore the heap property by performing a \"down-heap\" or \"sift-down\" operation, \n",
+    "which involves comparing the new root with its children and swapping it with the \n",
+    "smallest child until the heap property is restored.\n",
+    "The running time of ExtractMin is O(d * log_d(n)), where n is the number of elements in the heap. \n",
+    "This is because each sift-down operation may require checking d children, \n",
+    "and the height of a d-ary heap is log_d(n).\n",
+    "\n",
+    "(c) The DecreaseKey operation in a d-ary min-heap involves the following steps:\n",
+    "1. Decrease the value of a node to a new value that is smaller than its current value.\n",
+    "2. If the new value is smaller than the parent's value, swap the node with its parent.\n",
+    "3. Repeat this process until the heap property is restored.\n",
+    "The running time of DecreaseKey is O(d * log_d(n)), as it may require moving up the tree\n",
+    " to restore the heap property, and each step involves checking d children.\n",
+    "\n",
+    "(d) The Insert operation in a d-ary min-heap involves the following steps:\n",
+    "1. Add the new element to the end of the heap (the next available index in the array).\n",
+    "2. Perform an \"up-heap\" or \"sift-up\" operation, which involves comparing the new \n",
+    "element with its parent and swapping it until the heap property is restored.       "
    ]
   }
  ],
